package model;

public class Dossier {
}
