@startuml

class Doctor{
}
class Patient{
}
class Objective{
}
class Report{
}
class Dossier{
}
class Message{
}


Report " *  " o-- "*" Doctor : is written by
Message "*" o-- "1" Doctor : is written by
Report "*" -* "1" Dossier : is assigned to
Objective "*" o-- "1" Doctor : is managed
Patient "1" o-- "*" Objective  : comply
Report "1" o-- "*" Message : contains
Dossier "1" --* "1" Patient : is assigned to
Doctor "1" o- "*" Patient : is supported by

@enduml